Fixed and Removed some old code